monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4023/A4023b.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4023;

grammar A4023b extends de.monticore.grammar.cocos.invalid.A4023c{

 A = "a";

}
